# NoDrainManaOrStamina

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  vcpkg.json
CreationKit/: NoDrainManaOrStamina.esl
include/: SKSEMenuFramework.h
src/: HookUtil.hpp  Hook_DualValueModifier.cpp  Hook_DualValueModifier.h  Hooks.cpp  Hooks.h  MagFormatHook.hpp  PCH.h  RemoveDrains.cpp  RemoveDrains.h  ScalingConfig.cpp  ScalingConfig.h  TextTemplates.cpp  TextTemplates.h  UI_RemoveDrains.cpp  UI_RemoveDrains.h  common.h  plugin.cpp
src/Detours/: detours.cpp  detours.hpp  detver.hpp  disasm.cpp  image.cpp  modules.cpp
